--- a/ZAMN Editor/app.config
+++ b/ZAMN Editor/app.config
@@ -62,6 +62,9 @@
             <setting name="Animate" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="BackupsExist" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ZAMNEditor.My.MySettings>
     </userSettings>
 </configuration>
