Added rendering of monster respawn area

--- a/ZAMN Editor/app.config
+++ b/ZAMN Editor/app.config
@@ -65,6 +65,9 @@
             <setting name="BackupsExist" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ShowRespawn" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ZAMNEditor.My.MySettings>
     </userSettings>
 </configuration>
