--- a/ZAMN Editor/My Project/Settings.settings
+++ b/ZAMN Editor/My Project/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="BackupsExist" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ShowRespawn" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
