--- a/ZAMN Editor/ZAMN Editor.vbproj
+++ b/ZAMN Editor/ZAMN Editor.vbproj
@@ -84,6 +84,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Backups.vb" />
+    <Compile Include="BitReader.vb" />
     <Compile Include="BossMonster.vb" />
     <Compile Include="ByteArrayStream.vb" />
     <Compile Include="ClearButton.Designer.vb">
@@ -229,8 +230,8 @@
     <Compile Include="SaveStateEditor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="SMDGFX.vb" />
     <Compile Include="SmoothZoom.vb" />
-    <Compile Include="SNESGFX.vb" />
     <Compile Include="TableContextMenu\TableContextMenu.Designer.vb">
       <DependentUpon>TableContextMenu.vb</DependentUpon>
     </Compile>
